samples/_failures_safe/1761329720_a9d61c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3ef12a30.c: In function ‘main’:
./samples/SAFE/__tmp_3ef12a30.c:167:16: error: missing terminating " character
  167 |         printf(" %-18s %5d %6d\n
      |                ^~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_3ef12a30.c:167:9: error: expected expression at end of input
  167 |         printf(" %-18s %5d %6d\n
      |         ^~~~~~
./samples/SAFE/__tmp_3ef12a30.c:167:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3ef12a30.c:167:9: error: expected declaration or statement at end of input
